# cito

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 1_collection_mismatch.yaml  2_bug_report.yaml  3_feature_request.yaml  config.yml
.github/workflows/: ci.yml  release.yml
bench/: bench_collect.sh  fuzz_gen.py  gen_corpus.py
scripts/: diff_collect.py  validate_repos.py
src/: collector.rs  commands.rs  config.rs  daemon.rs  keyword.rs  lib.rs  main.rs  params.rs  runner.rs  warm.rs
tests/: collect.rs  impact.rs
tests/fixtures/basic/: conftest.py  helpers_test.py  notatest.py  support.py  test_condeps.py  test_conftest_ignored.py  test_globignored_x.py  test_inherit.py  test_marks.py  test_params.py  test_sample.py  test_shadowing.py
tests/fixtures/basic/sub/: test_inner.py
tests/fixtures/configured/: pytest.ini
tests/fixtures/configured/outside/: check_outside.py
tests/fixtures/configured/suite/: check_alpha.py  test_beta.py
tests/fixtures/configured/suite/skipme/: check_skipped.py
tests/fixtures/impact/: test_core.py  test_free.py  test_util.py
tests/fixtures/impact/pkg/: util.py
tests/fixtures/plugins/: test_plugins.py
